# yp-diagnostic

./: CHANGELOG.md  CITATION.cff  FINAL_AUDIT.md  LICENSE  README.md  RELEASE_NOTES.md  REVIEW.md  pyproject.toml
docs/: checklist.md  how_not_to_use.md  reproducibility_statement.md  scope.md  validation_protocol.md
examples/: synthetic_demo.ipynb
src/yp_diagnostic/: __init__.py  core.py  uncertainty.py  validation.py
tests/: __init__.py  test_core.py  test_validation.py
